--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "GLFW",
-    "owner": "anulax1225",
+    "author": "anulax1225",
     "git": "https://github.com/anulax1225/glfw",
     "links": 
     [
